--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -4,8 +4,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.punna.calculator.MainActivity"
+    tools:context="com.example.punna.calci.MainActivity"
     tools:layout_editor_absoluteY="73dp">
+
+    <Button
+        android:id="@+id/allclear"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:minHeight="48dp"
+        android:minWidth="48dp"
+        android:text="AC"
+        app:layout_constraintBaseline_toBaselineOf="@+id/minus"
+        app:layout_constraintStart_toStartOf="@+id/clear1" />
+
+    <Button
+        android:id="@+id/clear1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:minHeight="48dp"
+        android:minWidth="48dp"
+        android:text="C"
+        app:layout_constraintBaseline_toBaselineOf="@+id/multi"
+        app:layout_constraintStart_toEndOf="@+id/divide" />
 
     <Button
         android:id="@+id/buttonNeg"
